[gd_scene load_steps=13 format=3 uid="uid://c23gwg707lkdu"]

[ext_resource type="Texture2D" uid="uid://e0eueovjwdd0" path="res://assets/images/bg0.png" id="1_0wpql"]
[ext_resource type="Script" path="res://scripts/level.gd" id="1_l48yf"]
[ext_resource type="Texture2D" uid="uid://b7ry713ph5hhw" path="res://assets/images/block-sheet.png" id="2_j76gw"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_scy82"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_h8e7b"]
normal = Vector2(-1, 0)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ikiw5"]
resource_name = "foreground"
texture = ExtResource("2_j76gw")
margins = Vector2i(1, 1)
separation = Vector2i(2, 0)
texture_region_size = Vector2i(25, 25)
use_texture_padding = false
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.5, -12.5, 12.5, -12.5, 12.5, 12.5, -12.5, 12.5)
3:0/0/physics_layer_0/polygon_0/one_way = true
3:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_1/angular_velocity = 0.0
3:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-12.5, -12.5, 12.5, -12.5, 12.5, 12.5, -12.5, 12.5)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.5, -12.5, 12.5, -12.5, 12.5, 12.5, -12.5, 12.5)
0:0/0/physics_layer_0/polygon_0/one_way = true
0:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_1/angular_velocity = 0.0
0:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-12.5, -12.5, 12.5, -12.5, 12.5, 12.5, -12.5, 12.5)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.5, -12.5, 12.5, -12.5, 12.5, 12.5, -12.5, 12.5)
1:0/0/physics_layer_0/polygon_0/one_way = true
1:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_1/angular_velocity = 0.0
1:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-12.5, -12.5, 12.5, -12.5, 12.5, 12.5, -12.5, 12.5)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.5, -12.5, 12.5, -12.5, 12.5, 12.5, -12.5, 12.5)
2:0/0/physics_layer_0/polygon_0/one_way = true
2:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_1/angular_velocity = 0.0
2:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-12.5, -12.5, 12.5, -12.5, 12.5, 12.5, -12.5, 12.5)

[sub_resource type="TileSet" id="TileSet_lo7iw"]
tile_size = Vector2i(25, 25)
physics_layer_0/collision_layer = 32
physics_layer_0/collision_mask = 0
physics_layer_1/collision_layer = 128
physics_layer_1/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_ikiw5")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mm7b0"]
size = Vector2(124, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hpwfg"]
size = Vector2(73, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dglqe"]
size = Vector2(270.75, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6wwpd"]
size = Vector2(307, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2d27f"]
size = Vector2(42, 39)

[node name="Level" type="Node2D"]
script = ExtResource("1_l48yf")
metadata/_edit_group_ = true

[node name="OuterWalls" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="LeftWall" type="CollisionShape2D" parent="OuterWalls"]
position = Vector2(50, 0)
shape = SubResource("WorldBoundaryShape2D_scy82")

[node name="RightWall" type="CollisionShape2D" parent="OuterWalls"]
position = Vector2(750, 0)
shape = SubResource("WorldBoundaryShape2D_h8e7b")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(400, 240)
texture = ExtResource("1_0wpql")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_lo7iw")
format = 2
layer_0/tile_data = PackedInt32Array(2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 851970, 0, 0, 851971, 0, 0, 851996, 0, 0, 851997, 0, 0, 327682, 0, 0, 589826, 0, 0, 327683, 0, 0, 589827, 0, 0, 327708, 0, 0, 589852, 0, 0, 327709, 0, 0, 589853, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327707, 0, 0, 327706, 0, 0, 327705, 0, 0, 589851, 0, 0, 589850, 0, 0, 589849, 0, 0, 851995, 0, 0, 851994, 0, 0, 851993, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0)

[node name="AirFlow" type="Node2D" parent="."]

[node name="LeftFlow" type="Area2D" parent="AirFlow"]
modulate = Color(1, 0.243137, 1, 1)
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AirFlow/LeftFlow"]
position = Vector2(688, 365)
shape = SubResource("RectangleShape2D_mm7b0")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AirFlow/LeftFlow"]
position = Vector2(687, 266)
shape = SubResource("RectangleShape2D_mm7b0")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AirFlow/LeftFlow"]
position = Vector2(687, 166)
shape = SubResource("RectangleShape2D_mm7b0")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="AirFlow/LeftFlow"]
position = Vector2(363.5, 266)
shape = SubResource("RectangleShape2D_hpwfg")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="AirFlow/LeftFlow"]
position = Vector2(610, 79)
shape = SubResource("RectangleShape2D_dglqe")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="AirFlow/LeftFlow"]
position = Vector2(246.5, 44.5)
shape = SubResource("RectangleShape2D_6wwpd")

[node name="RightFlow" type="Area2D" parent="AirFlow"]
modulate = Color(0.964706, 1, 0, 1)
position = Vector2(800, 532)
rotation = 3.14159
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AirFlow/RightFlow"]
position = Vector2(688, 365)
shape = SubResource("RectangleShape2D_mm7b0")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AirFlow/RightFlow"]
position = Vector2(687, 266)
shape = SubResource("RectangleShape2D_mm7b0")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AirFlow/RightFlow"]
position = Vector2(687, 166)
shape = SubResource("RectangleShape2D_mm7b0")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="AirFlow/RightFlow"]
position = Vector2(363.5, 266)
shape = SubResource("RectangleShape2D_hpwfg")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="AirFlow/RightFlow"]
position = Vector2(614.248, 453.003)
rotation = -3.14159
shape = SubResource("RectangleShape2D_dglqe")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="AirFlow/RightFlow"]
position = Vector2(244.998, 488.001)
rotation = -3.14159
shape = SubResource("RectangleShape2D_6wwpd")

[node name="UpFlow" type="Area2D" parent="AirFlow"]
collision_layer = 0
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AirFlow/UpFlow"]
polygon = PackedVector2Array(50, 383, 50, 427, 750, 426, 750, 380, 626, 380, 626, 325, 749, 325, 749, 282, 625, 282, 625, 226, 751, 226, 750, 182, 625, 182, 625, 125, 751, 125, 749, 95, 470, 95, 468, 64, 323, 64, 323, 95, 52, 95, 51, 126, 175, 126, 176, 183, 327, 250, 474, 250, 474, 282, 327, 282, 327, 250, 176, 183, 51, 183, 51, 225, 175, 225, 175, 282, 51, 282, 51, 326, 175, 326, 175, 383)

[node name="DownFlow" type="Area2D" parent="AirFlow"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AirFlow/DownFlow"]
position = Vector2(71, 44.5)
shape = SubResource("RectangleShape2D_2d27f")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AirFlow/DownFlow"]
position = Vector2(730, 44)
shape = SubResource("RectangleShape2D_2d27f")
